# vercel-scripts

./: .aliases  .gitignore  .goreleaser.yml  .prerequisites  CLAUDE.md  Cargo.toml  Makefile  README.md  biome.json  deno.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
.github/actions/update-homebrew-formula/: action.yml
.github/workflows/: publish.yml  test.yml
scripts/: build_next.sh  build_project.sh  build_vercel.sh  deploy_project.sh  install.sh  link_local_next.sh  link_next.sh  package_next.sh  start_local_project.sh
src/: config.rs  config.ts  error.rs  execute.sh  generate-readme.ts  lib.rs  main.rs  main.ts  script.ts  utils.ts  worktree.rs  worktree.ts
src/cli/: mod.rs  prompts.rs  runner.rs
src/commands/: add-script-dir.ts  add_script_dir.rs  completions.rs  list-script-dirs.ts  list-scripts.ts  list_script_dirs.rs  list_scripts.rs  mod.rs  new_script.rs  remove-script-dir.ts  remove_script_dir.rs
src/runtime/: runtime.sh
src/script/: manager.rs  mod.rs  parser.rs  types.rs
src/scripts/: add_to_hosts.sh  build_local_project.sh  build_next.sh  build_project.sh  build_vercel.sh  deploy_project.sh  link_local_next.sh  link_project.sh  package_next.sh  start_local_project.sh
